add contributing authors - Hunter and Joe

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,8 @@
 
 MJ Johnson <61@holbertonschool.com>
 David John Coleman II <djc_fileno@davidjohncoleman.com>
+
+# Contributing authors
+
+Hunter Casbeer <132@holbertonschool.com>
+Joe McDaniel <117@holbertonschool.com>
