--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,4 @@
-MJ Johnson
-David John Coleman II
+# This file lists all individuals having contributed content to the repository.
+
+MJ Johnson <61@holbertonschool.com>
+David John Coleman II <djc_fileno@davidjohncoleman.com>
